fix logo align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,7 +111,7 @@ a:hover {
     .logo {
         text-align: center;
         margin: 0px;
-        min-width: 50%;
+        min-width: 45%;
     }
 
     .logo>span {
